# pipestream

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: python-package.yml
pipestream/: pipeline.py
pypeline/: pipeline.py
tests/: test_pipeline.py
