[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypeline"
version = "1.0.0"
authors = [
  { name="Rafael Acioly", email="aciolyr@gmail.com" },
]
description = "An utility class that provides a convenient way to 'pipe' a given input through a series of classes or callables"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rafa-acioly/pypeline"
"Bug Tracker" = "https://github.com/rafa-acioly/pypeline/issues"